// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hide reply button 1`] = `
<div
  data-testid="comment-comment-id"
>
  <withPropsOnChange(HorizontalGutter)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <withPropsOnChange(Flex)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <Relay(PermalinkButtonContainerProps)
                commentID="comment-id"
                story={
                  Object {
                    "url": "http://localhost/story",
                  }
                }
              />
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                  }
                }
                me={null}
                settings={
                  Object {
                    "reaction": Object {
                      "icon": "thumb_up_alt",
                      "label": "Respect",
                    },
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                  }
                }
                me={null}
              />
            </ButtonsBar>
          </withPropsOnChange(Flex)>
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName={null}
      showEditedMarker={false}
      username="Marvin"
    />
  </withPropsOnChange(HorizontalGutter)>
</div>
`;

exports[`renders body only 1`] = `
<div
  data-testid="comment-comment-id"
>
  <withPropsOnChange(HorizontalGutter)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <withPropsOnChange(Flex)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <ReplyButton
                active={false}
                id="comments-commentContainer-replyButton-comment-id"
                onClick={[Function]}
              />
              <Relay(PermalinkButtonContainerProps)
                commentID="comment-id"
                story={
                  Object {
                    "url": "http://localhost/story",
                  }
                }
              />
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": null,
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                  }
                }
                me={null}
                settings={
                  Object {
                    "reaction": Object {
                      "icon": "thumb_up_alt",
                      "label": "Respect",
                    },
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": null,
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                  }
                }
                me={null}
              />
            </ButtonsBar>
          </withPropsOnChange(Flex)>
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName={null}
      showEditedMarker={false}
      username={null}
    />
  </withPropsOnChange(HorizontalGutter)>
</div>
`;

exports[`renders in reply to 1`] = `
<div
  data-testid="comment-comment-id"
>
  <withPropsOnChange(HorizontalGutter)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <withPropsOnChange(Flex)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <ReplyButton
                active={false}
                id="comments-commentContainer-replyButton-comment-id"
                onClick={[Function]}
              />
              <Relay(PermalinkButtonContainerProps)
                commentID="comment-id"
                story={
                  Object {
                    "url": "http://localhost/story",
                  }
                }
              />
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": Object {
                      "author": Object {
                        "username": "ParentAuthor",
                      },
                    },
                    "pending": false,
                  }
                }
                me={null}
                settings={
                  Object {
                    "reaction": Object {
                      "icon": "thumb_up_alt",
                      "label": "Respect",
                    },
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": Object {
                      "author": Object {
                        "username": "ParentAuthor",
                      },
                    },
                    "pending": false,
                  }
                }
                me={null}
              />
            </ButtonsBar>
          </withPropsOnChange(Flex)>
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName="ParentAuthor"
      showEditedMarker={false}
      username="Marvin"
    />
  </withPropsOnChange(HorizontalGutter)>
</div>
`;

exports[`renders username and body 1`] = `
<div
  data-testid="comment-comment-id"
>
  <withPropsOnChange(HorizontalGutter)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <withPropsOnChange(Flex)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <ReplyButton
                active={false}
                id="comments-commentContainer-replyButton-comment-id"
                onClick={[Function]}
              />
              <Relay(PermalinkButtonContainerProps)
                commentID="comment-id"
                story={
                  Object {
                    "url": "http://localhost/story",
                  }
                }
              />
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                  }
                }
                me={null}
                settings={
                  Object {
                    "reaction": Object {
                      "icon": "thumb_up_alt",
                      "label": "Respect",
                    },
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                  }
                }
                me={null}
              />
            </ButtonsBar>
          </withPropsOnChange(Flex)>
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName={null}
      showEditedMarker={false}
      username="Marvin"
    />
  </withPropsOnChange(HorizontalGutter)>
</div>
`;

exports[`shows conversation link 1`] = `
<div
  data-testid="comment-comment-id"
>
  <withPropsOnChange(HorizontalGutter)>
    <IndentedComment
      blur={false}
      body="Woof"
      createdAt="1995-12-17T03:24:00.000Z"
      footer={
        <React.Fragment>
          <withPropsOnChange(Flex)
            justifyContent="space-between"
          >
            <ButtonsBar>
              <ReplyButton
                active={false}
                id="comments-commentContainer-replyButton-comment-id"
                onClick={[Function]}
              />
              <Relay(PermalinkButtonContainerProps)
                commentID="comment-id"
                story={
                  Object {
                    "url": "http://localhost/story",
                  }
                }
              />
              <withContext(createMutationContainer(withContext(createMutationContainer(withContext(createMutationContainer(Relay(ReactionButtonContainer)))))))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                  }
                }
                me={null}
                settings={
                  Object {
                    "reaction": Object {
                      "icon": "thumb_up",
                      "label": "Respect",
                      "labelActive": "Respected",
                    },
                  }
                }
              />
            </ButtonsBar>
            <ButtonsBar>
              <withContext(createMutationContainer(Relay(ReportButtonContainer)))
                comment={
                  Object {
                    "author": Object {
                      "id": "author-id",
                      "username": "Marvin",
                    },
                    "body": "Woof",
                    "createdAt": "1995-12-17T03:24:00.000Z",
                    "editing": Object {
                      "editableUntil": "1995-12-17T03:24:30.000Z",
                      "edited": false,
                    },
                    "id": "comment-id",
                    "parent": null,
                    "pending": false,
                  }
                }
                me={null}
              />
            </ButtonsBar>
          </withPropsOnChange(Flex)>
          <ShowConversationLink
            href="http://localhost/story?commentID=comment-id"
            id="comments-commentContainer-showConversation-comment-id"
            onClick={[Function]}
          />
        </React.Fragment>
      }
      indentLevel={1}
      parentAuthorName={null}
      showEditedMarker={false}
      username="Marvin"
    />
  </withPropsOnChange(HorizontalGutter)>
</div>
`;
